--- a/public/act1/index.html
+++ b/public/act1/index.html
@@ -23,26 +23,26 @@
     <meta itemprop="wordCount" content="55">
     <title>Act 1 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/index.xml" rel="alternate" type="application/rss+xml" title="Act 1 :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764499442" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764499442" defer></script>
-    <script src="/js/search-lunr.js?1764499442" defer></script>
-    <script src="/js/search.js?1764499442" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1764499964" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1764499964" defer></script>
+    <script src="/js/search-lunr.js?1764499964" defer></script>
+    <script src="/js/search.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764499442";
+      window.relearn.index_js_url="/searchindex.en.js?1764499964";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764499442" defer></script>
+    <script src="/js/lunr/lunr.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499442" rel="stylesheet">
-    <link href="/css/theme.css?1764499442" rel="stylesheet">
-    <link href="/css/format-html.css?1764499442" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499964" rel="stylesheet">
+    <link href="/css/theme.css?1764499964" rel="stylesheet">
+    <link href="/css/format-html.css?1764499964" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -209,7 +209,7 @@
             <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -227,8 +227,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764499442" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499442" defer></script>
-    <script src="/js/theme.js?1764499442" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1764499964" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499964" defer></script>
+    <script src="/js/theme.js?1764499964" defer></script>
   </body>
 </html>
