--- a/public/act2/going-in-reverse/index.html
+++ b/public/act2/going-in-reverse/index.html
@@ -31,26 +31,26 @@ Kevin McFarland mission statement Hello, I’m Kevin (though past friends have r
     <meta itemprop="wordCount" content="827">
     <title>Going in Reverse :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act2/going-in-reverse/index.xml" rel="alternate" type="application/rss+xml" title="Going in Reverse :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764499442" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764499442" defer></script>
-    <script src="/js/search-lunr.js?1764499442" defer></script>
-    <script src="/js/search.js?1764499442" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1764499964" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1764499964" defer></script>
+    <script src="/js/search-lunr.js?1764499964" defer></script>
+    <script src="/js/search.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764499442";
+      window.relearn.index_js_url="/searchindex.en.js?1764499964";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764499442" defer></script>
+    <script src="/js/lunr/lunr.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499442" rel="stylesheet">
-    <link href="/css/theme.css?1764499442" rel="stylesheet">
-    <link href="/css/format-html.css?1764499442" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499964" rel="stylesheet">
+    <link href="/css/theme.css?1764499964" rel="stylesheet">
+    <link href="/css/format-html.css?1764499964" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -168,8 +168,8 @@ Kevin McFarland mission statement Hello, I’m Kevin (though past friends have r
 
 <h1 id="going-in-reverse">Going in Reverse</h1>
 
-<p><a href="#R-image-9053069597dbffaf5d8c0770a02217b2" class="lightbox-link"><img alt="Kevin McFarland" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/kevinmcfarland-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9053069597dbffaf5d8c0770a02217b2"><img alt="Kevin McFarland" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/kevinmcfarland-avatar.gif"></a></p>
+<p><a href="#R-image-8e684eb359aa14715d0ebb58c244372d" class="lightbox-link"><img alt="Kevin McFarland" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/kevinmcfarland-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8e684eb359aa14715d0ebb58c244372d"><img alt="Kevin McFarland" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/kevinmcfarland-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 2/5</p>
 <p>Kevin in the Retro Store needs help rewinding tech and going in reverse. Extract the flag and enter it here.</p>
@@ -363,7 +363,7 @@ Compare it to the same index in ENC_PASS$</code></pre></div>
             <li class="" data-nav-url="/act2/rogue-gnome-identity-provider/index.html"><a class="padding" href="/act2/rogue-gnome-identity-provider/index.html">Rogue Gnome Identity Provider</a></li>
             <li class="" data-nav-url="/act2/quantognome-leap/index.html"><a class="padding" href="/act2/quantognome-leap/index.html">Quantognome Leap</a></li>
             <li class="active " data-nav-url="/act2/going-in-reverse/index.html"><a class="padding" href="/act2/going-in-reverse/index.html">Going in Reverse</a></li></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -381,8 +381,8 @@ Compare it to the same index in ENC_PASS$</code></pre></div>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764499442" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499442" defer></script>
-    <script src="/js/theme.js?1764499442" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1764499964" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499964" defer></script>
+    <script src="/js/theme.js?1764499964" defer></script>
   </body>
 </html>
