--- a/public/act2/idorable-bistro/index.html
+++ b/public/act2/idorable-bistro/index.html
@@ -43,26 +43,26 @@ Teaching people how to hack and protect systems is my passion.">
     <meta itemprop="wordCount" content="472">
     <title>Idorable Bistro :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act2/idorable-bistro/index.xml" rel="alternate" type="application/rss+xml" title="Idorable Bistro :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764489759" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764489759" defer></script>
-    <script src="/js/search-lunr.js?1764489759" defer></script>
-    <script src="/js/search.js?1764489759" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1764499964" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1764499964" defer></script>
+    <script src="/js/search-lunr.js?1764499964" defer></script>
+    <script src="/js/search.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764489759";
+      window.relearn.index_js_url="/searchindex.en.js?1764499964";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764489759" defer></script>
+    <script src="/js/lunr/lunr.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764489759" rel="stylesheet">
-    <link href="/css/theme.css?1764489759" rel="stylesheet">
-    <link href="/css/format-html.css?1764489759" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499964" rel="stylesheet">
+    <link href="/css/theme.css?1764499964" rel="stylesheet">
+    <link href="/css/format-html.css?1764499964" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -173,8 +173,8 @@ Teaching people how to hack and protect systems is my passion.">
 
 <h1 id="idorable-bistro">Idorable Bistro</h1>
 
-<p><a href="#R-image-37f1d87b82caedc703c2b7c6fd56c5be" class="lightbox-link"><img alt="Kyle Parrish" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/joshwright-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-37f1d87b82caedc703c2b7c6fd56c5be"><img alt="Kyle Parrish" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/joshwright-avatar.gif"></a></p>
+<p><a href="#R-image-1df7a55c57f4f4060e255be7b6caf409" class="lightbox-link"><img alt="Kyle Parrish" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/joshwright-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1df7a55c57f4f4060e255be7b6caf409"><img alt="Kyle Parrish" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/joshwright-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 2/5</p>
 <p>Josh has a tasty IDOR treat for you—stop by Sasabune for a bite of vulnerability. What is the name of the gnome?</p>
@@ -194,17 +194,17 @@ Teaching people how to hack and protect systems is my passion.">
 </blockquote>
 <h2 id="idorable-bistro">Idorable Bistro</h2>
 <p>Josh mentioned that there was a receipt outside the door. I went outside and to the right of the building and found this item:</p>
-<p><a href="#R-image-d88f0562de0febd514b188869fa6e103" class="lightbox-link"><img alt="Crumpled receipt" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d88f0562de0febd514b188869fa6e103"><img alt="Crumpled receipt" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-1.png"></a></p>
+<p><a href="#R-image-2592ea9972a40cf409daa1466ee08eaf" class="lightbox-link"><img alt="Crumpled receipt" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2592ea9972a40cf409daa1466ee08eaf"><img alt="Crumpled receipt" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-1.png"></a></p>
 <p>Parsing the QR I found out that it leads to <code>https://its-idorable.holidayhackchallenge.com/receipt/i9j0k1l2</code>:</p>
-<p><a href="#R-image-a28cc6849ea7dc247fd84900b4988a88" class="lightbox-link"><img alt="Parsing QR" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a28cc6849ea7dc247fd84900b4988a88"><img alt="Parsing QR" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-2.png"></a></p>
+<p><a href="#R-image-5b00bd93c8bde8a9962706c3404da1c9" class="lightbox-link"><img alt="Parsing QR" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5b00bd93c8bde8a9962706c3404da1c9"><img alt="Parsing QR" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-2.png"></a></p>
 <p>Upon visiting we are presented with the following webpage:</p>
-<p><a href="#R-image-51d5069c3708756e7a93bd19b3995688" class="lightbox-link"><img alt="Receipt page" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-51d5069c3708756e7a93bd19b3995688"><img alt="Receipt page" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-3.png"></a></p>
+<p><a href="#R-image-ecb77ed3618c93422b546a7e99ecc1b0" class="lightbox-link"><img alt="Receipt page" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ecb77ed3618c93422b546a7e99ecc1b0"><img alt="Receipt page" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-3.png"></a></p>
 <p>Upon inspecting the HTML code we find something interesting in a Javascript:</p>
-<p><a href="#R-image-c4102e06dab0520528524b285cb6b4d0" class="lightbox-link"><img alt="Interesting Javascript" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c4102e06dab0520528524b285cb6b4d0"><img alt="Interesting Javascript" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-4.png"></a></p>
+<p><a href="#R-image-69df5fe3c0de577dd69f7924b3e7893d" class="lightbox-link"><img alt="Interesting Javascript" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-idorable-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-69df5fe3c0de577dd69f7924b3e7893d"><img alt="Interesting Javascript" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-idorable-4.png"></a></p>
 <p>We find that the current receipt ID is <code>103</code> and that the real endpoint is <code>/api/receipt?id=${id}</code>, which takes an <code>id</code> parameter. Toying with this I found a lower boundary of <code>100</code> and an upper boundary of <code>160</code> appropiate. I could have narrowed further down, but I saw no point in doing that.</p>
 <p>Now, in order to traverse recipts in the range 100 to 160 I could do it manually, which would have taken too much time, or whip up a quick Python based bruteforcer. I went the Python route using this code:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-python" data-lang="python"><span style="display:flex;"><span><span style="color:#f92672">import</span> requests
@@ -294,7 +294,7 @@ Teaching people how to hack and protect systems is my passion.">
             <li class="" data-nav-url="/act2/rogue-gnome-identity-provider/index.html"><a class="padding" href="/act2/rogue-gnome-identity-provider/index.html">Rogue Gnome Identity Provider</a></li>
             <li class="" data-nav-url="/act2/quantognome-leap/index.html"><a class="padding" href="/act2/quantognome-leap/index.html">Quantognome Leap</a></li>
             <li class="" data-nav-url="/act2/going-in-reverse/index.html"><a class="padding" href="/act2/going-in-reverse/index.html">Going in Reverse</a></li></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -312,8 +312,8 @@ Teaching people how to hack and protect systems is my passion.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764489759" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764489759" defer></script>
-    <script src="/js/theme.js?1764489759" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1764499964" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499964" defer></script>
+    <script src="/js/theme.js?1764499964" defer></script>
   </body>
 </html>
