--- a/public/act2/retro-recovery/index.html
+++ b/public/act2/retro-recovery/index.html
@@ -31,26 +31,26 @@ Mark DeVito mission statement I am an avid collector of things of the past. I lo
     <meta itemprop="wordCount" content="1292">
     <title>Retro Recovery :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act2/retro-recovery/index.xml" rel="alternate" type="application/rss+xml" title="Retro Recovery :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764499442" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764499442" defer></script>
-    <script src="/js/search-lunr.js?1764499442" defer></script>
-    <script src="/js/search.js?1764499442" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1764499964" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1764499964" defer></script>
+    <script src="/js/search-lunr.js?1764499964" defer></script>
+    <script src="/js/search.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764499442";
+      window.relearn.index_js_url="/searchindex.en.js?1764499964";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764499442" defer></script>
+    <script src="/js/lunr/lunr.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499442" rel="stylesheet">
-    <link href="/css/theme.css?1764499442" rel="stylesheet">
-    <link href="/css/format-html.css?1764499442" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499964" rel="stylesheet">
+    <link href="/css/theme.css?1764499964" rel="stylesheet">
+    <link href="/css/format-html.css?1764499964" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -174,8 +174,8 @@ Mark DeVito mission statement I am an avid collector of things of the past. I lo
 
 <h1 id="retro-recovery">Retro Recovery</h1>
 
-<p><a href="#R-image-2b54f9c67d6a2a35bf5bc6d14178de9a" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/markdevito-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2b54f9c67d6a2a35bf5bc6d14178de9a"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/markdevito-avatar.gif"></a></p>
+<p><a href="#R-image-984a3facf7b17c151cf38980430859c8" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/markdevito-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-984a3facf7b17c151cf38980430859c8"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/markdevito-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 2/5</p>
 <p>Join Mark in the retro shop. Analyze his disk image for a blast from the retro past and recover some classic treasures.</p>
@@ -358,8 +358,8 @@ This hints that the real clue is inside <code>all_i-want_for_christmas.bas</code
 <h4 id="what-the-command-does-6">What the command does</h4>
 <p>Shows all readable strings in the recovered BASIC file, which appears to be a Star Trek-style text game.</p>
 <h4 id="relevant-output">Relevant Output</h4>
-<p><a href="#R-image-d41f43393fde849d18f8a0a2454e180b" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-retro-recovery-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d41f43393fde849d18f8a0a2454e180b"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-retro-recovery-1.png"></a></p>
+<p><a href="#R-image-249e453d695f1a48f2645e414adfb8bd" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act2/act2-retro-recovery-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-249e453d695f1a48f2645e414adfb8bd"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act2/act2-retro-recovery-1.png"></a></p>
 <p>A full Star Trek BASIC program appears, and inside it is a Base64-encoded line (line 211).</p>
 <h4 id="why-this-output-matters-6">Why this output matters</h4>
 <p>The encoded string is clearly placed as a hidden message embedded in the program.
@@ -439,7 +439,7 @@ It serves as the challenge solution / flag.</p>
             <li class="" data-nav-url="/act2/rogue-gnome-identity-provider/index.html"><a class="padding" href="/act2/rogue-gnome-identity-provider/index.html">Rogue Gnome Identity Provider</a></li>
             <li class="" data-nav-url="/act2/quantognome-leap/index.html"><a class="padding" href="/act2/quantognome-leap/index.html">Quantognome Leap</a></li>
             <li class="" data-nav-url="/act2/going-in-reverse/index.html"><a class="padding" href="/act2/going-in-reverse/index.html">Going in Reverse</a></li></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -457,8 +457,8 @@ It serves as the challenge solution / flag.</p>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764499442" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499442" defer></script>
-    <script src="/js/theme.js?1764499442" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1764499964" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499964" defer></script>
+    <script src="/js/theme.js?1764499964" defer></script>
   </body>
 </html>
